--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -55,7 +55,7 @@ jobs:
           hugo \
             --gc \
             --minify \
-            --baseURL "${{ steps.pages.outputs.base_url }}/portfolio"
+            --baseURL "${{ steps.pages.outputs.base_url }}/"
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
