--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://localhost:1313/portfolio'
+baseURL = 'http://localhost:1313/'
 languageCode = 'en-us'
 title = 'neymarsabin'
 theme = 'poison'
