--- a/hugo.toml
+++ b/hugo.toml
@@ -17,7 +17,7 @@ disqusShortname = "neymarsabin"
     # favicon = "favicon.png"             # path to favicon (defaults to favicon.png)
     summary = false
 
-    front_page_content = ["about"] # Equivalent to the default value, add page bundle names to include them on the front page.
+    front_page_content = ["intro"] # Equivalent to the default value, add page bundle names to include them on the front page.
     # MENU PLACEHOLDER
     # Menu dict keys:
         # Name:         The name to display on the menu.
