--- a/hugo.toml
+++ b/hugo.toml
@@ -9,7 +9,7 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
 # disqusShortname = "neymarsabin"
 
 [params]
-    brand = "Sabin Nepal"                      # name of your site - appears in the sidebar
+    brand = "./neymarsabin"                      # name of your site - appears in the sidebar
     remote_brand_image = 'https://github.com/neymarsabin.png' # path to a remote file
     # brand_image = "/images/test.jpg"    # path to the image shown in the sidebar
     # description = "Software Developer"     #Used as default meta description if not specified in front matter
@@ -25,9 +25,9 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
         # HasChildren:  If the directory's files should be listed.  Default is true.
         # Limit:        If the files should be listed, how many should be shown.
     menu = [
-         {Name = "About", URL = "/about/", Pre = "Recent", HasChildren = false},
-         {Name = "Posts", URL = "/posts/", Pre = "Recent", HasChildren = false , Limit = 5},
-         {Name = "Projects", URL = "/projects/", Pre = "Recent", HasChildren = false}
+         # {Name = "About", URL = "/about/", Pre = "Recent", HasChildren = false},
+         # {Name = "Wrants", URL = "/posts/", Pre = "Recent", HasChildren = false , Limit = 5},
+         # {Name = "Projects", URL = "/projects/", Pre = "Recent", HasChildren = false}
     ]
 
     # Links to your socials.  Comment or delete any you don't need/use.
@@ -49,9 +49,9 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
 
     # NOTE: If you don't want to use RSS, comment or delete the following lines
     # Adds an RSS icon to the end of the socials which links to {{ .Site.BaseURL }}/index.xml
-    rss_icon = true
+    # rss_icon = false
     # Which section the RSS icon links to, defaults to all content. See https://gohugo.io/templates/rss/#section-rss
-    rss_section = "posts"
+    # rss_section = "posts"
 
     # Hex colors for your sidebar.
     moon_sun_background_color = "#515151"   # default is #515151
