Add lead and some modifications

--- a/hugo.toml
+++ b/hugo.toml
@@ -12,7 +12,7 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
     brand = "~/neymarsabin"                      # name of your site - appears in the sidebar
     remote_brand_image = 'https://github.com/neymarsabin.png' # path to a remote file
     # brand_image = "/images/test.jpg"    # path to the image shown in the sidebar
-    # description = "Software Developer"     #Used as default meta description if not specified in front matter
+    description = "Sic Parvis Magna"     #Used as default meta description if not specified in front matter
     dark_mode = true # optional - defaults to false
     # favicon = "favicon.png"             # path to favicon (defaults to favicon.png)
     summary = false
