--- a/hugo.toml
+++ b/hugo.toml
@@ -25,9 +25,9 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
         # HasChildren:  If the directory's files should be listed.  Default is true.
         # Limit:        If the files should be listed, how many should be shown.
     menu = [
-         # {Name = "About", URL = "/about/", Pre = "Recent", HasChildren = false},
-         # {Name = "Wrants", URL = "/posts/", Pre = "Recent", HasChildren = false , Limit = 5},
-         # {Name = "Projects", URL = "/projects/", Pre = "Recent", HasChildren = false}
+         {Name = "./hustles", URL = "/projects/", Pre = "Recent" },
+         {Name = "./tldr", URL = "/posts/", Pre = "Recent" },
+         {Name = "./books", URL = "/books/", Pre = "Recent" }
     ]
 
     # Links to your socials.  Comment or delete any you don't need/use.
