--- a/hugo.toml
+++ b/hugo.toml
@@ -25,7 +25,8 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
         # HasChildren:  If the directory's files should be listed.  Default is true.
         # Limit:        If the files should be listed, how many should be shown.
     menu = [
-         {Name = "./tldr", URL = "/posts/", Pre = "Recent" }
+         {Name = "./books-for-nerds", URL = "/books"},
+         {Name = "./tldr", URL = "/posts/"},
     ]
 
     # Links to your socials.  Comment or delete any you don't need/use.
