--- a/hugo.toml
+++ b/hugo.toml
@@ -25,7 +25,9 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
         # HasChildren:  If the directory's files should be listed.  Default is true.
         # Limit:        If the files should be listed, how many should be shown.
     menu = [
-         {Name = "./tldr", URL = "/posts/"},
+         {Name = "./tldr", URL = "/posts/" },
+         {Name = "./projects", URL = "/projects" },
+         {Name = "./books-for-nerds", URL = "/books" }
     ]
 
     # Links to your socials.  Comment or delete any you don't need/use.
