--- a/hugo.toml
+++ b/hugo.toml
@@ -38,7 +38,7 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
     github_url = "https://github.com/neymarsabin"
     # gitlab_url = "https://gitlab.com/neymarsabin"
     # instagram_url = "https://instagram.com"
-    linkedin_url = "https://linkedin.com"
+    # linkedin_url = "https://linkedin.com"
     # mastodon_url = "https://mastodon.social"
     # matrix_url = "https://matrix.org"
     telegram_url = "https://telegram.org/neymarsabin"
