--- a/hugo.toml
+++ b/hugo.toml
@@ -26,8 +26,8 @@ googleAanalytics = "G-5WN9S7TDL8"
         # HasChildren:  If the directory's files should be listed.  Default is true.
         # Limit:        If the files should be listed, how many should be shown.
     menu = [
-         {Name = "./tldr", URL = "/posts/" },
-         {Name = "./projects", URL = "/projects/" }
+         {Name = "./tldr", URL = "/posts/" }
+         # {Name = "./projects", URL = "/projects/" }
     ]
 
     # Links to your socials.  Comment or delete any you don't need/use.
