--- a/hugo.toml
+++ b/hugo.toml
@@ -28,6 +28,7 @@ googleAanalytics = "G-5WN9S7TDL8"
     menu = [
          {Name = "./tldr", URL = "/posts/" },
          {Name = "./exps", URL = "/xps/" }
+         # {Name = "./projects", URL = "/projects/"}
          # {Name = "./projects", URL = "/projects/" }
     ]
 
