--- a/hugo.toml
+++ b/hugo.toml
@@ -26,9 +26,10 @@ googleAanalytics = "G-5WN9S7TDL8"
         # HasChildren:  If the directory's files should be listed.  Default is true.
         # Limit:        If the files should be listed, how many should be shown.
     menu = [
-         {Name = "./tldr", URL = "/posts/" },
          {Name = "./exps", URL = "/xps/" },
-         {Name = "./evm", URL = "/smart-contracts/", HasChildren = true }
+         {Name = "./evm", URL = "/smart-contracts/", HasChildren = true },
+         {Name = "./tensors", URL = "/tensors/", HasChildren = true },
+         {Name = "./tldr", URL = "/posts/" }
     ]
 
     # Links to your socials.  Comment or delete any you don't need/use.
